# cornlog

./: CMakeLists.txt  main.cpp
include/: file_writer.h  log.h  log_buffer.h  log_config.h  log_file_appender.h  log_level.h
src/: file_writer.cpp  log_file_appender.cpp
src/util/: singleton.h
test/: multi-thread_test.h  write_test.h
